# coding-agent

./: cli  pyproject.toml
brainstorms/: README.md
data/claude_help/: README.md  git_root.txt  triangle_numbers.txt
data/python_scripts/: example.py  triangle_numbers.py
data/python_scripts/executions/triangle_numbers/exec-triangle_numbers-2024-10-20T03:00:17.513148/: stdout.txt
src/: cli.py
src/coding_agent/: llm.py  main.py  python_script.py  python_script_test.py  sh.py  sh_test.py
src/coding_agent/serialization/: python_file.py  python_file_test.py
src/coding_agent/storage/: jsonl.py  jsonl_test.py
src/coding_agent/utils/: data.py  git_root.py  git_root_test.py
